--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -88,17 +88,16 @@ a:hover {
   display: flex;
   justify-content: center;
 }
-.kg-image-card,
-.kg-gallery-card,
-.article .feature-image {
-  width: 100vw;
-  &.kg-width-full,
-  &.kg-width-full img { 
-    max-width: var(--max-container-width);
-  }
-  &.kg-width-wide,
-  &.kg-width-wide img { 
+.site:has(.footer-layout) {
+  .article .feature-image.kg-width-wide,
+  .kg-image-card.kg-width-wide,
+  .kg-gallery-card.kg-width-wide {
     max-width: calc(var(--max-container-width) * 0.8);
+  }
+  .article .feature-image.kg-width-full,
+  .kg-image-card.kg-width-full,
+  .kg-gallery-card.kg-width-full {
+    max-width: var(--max-container-width);
   }
 }
 
